# robocon-demo-api

./: .gitignore  pyproject.toml  robot.toml  tasks.py  uvicorn_log_config.yaml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md  links.md
excercises/: mappings.py  openapi.json  openapidriver.robot  openapilibcore.robot  requestslibrary.robot  restinstance.robot  variables.resource
intro_robotframework/: exercise_log.robot
src/robocon_demo_api/: config.py  main.py
src/robocon_demo_api/data/: person.py
src/robocon_demo_api/models/: author.py  base.py  person.py  poem.py  user.py
src/robocon_demo_api/routers/: author.py  person.py  poem.py
src/robocon_demo_api/storage/: database.py
