[tool.poetry]
name="robocon_demo_api"
version = "0.1.0"
description = "An API implementation to demonstrate different resource dependencies."
license = "Apache-2.0"
authors = ["Robin Mackaij <r.a.mackaij@gmail.com>"]
maintainers = ["Robin Mackaij <r.a.mackaij@gmail.com>"]
readme =  "./docs/README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
packages = [
    { include = "robocon_demo_api", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
pydantic = "^1.10.4"
PyYAML = "^6.0"
# roboswag = {git = "https://github.com/MarketSquare/roboswag.git", rev = "main"}
roboswag = {git = "https://github.com/robinmackaij/roboswag.git", rev = "support_oas_3.1"}
robotframework-requests = "^0.9.4"
restinstance = "^1.3.0"
robotframework-openapidriver = "^3.5.1"
python-multipart = "^0.0.5"


[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pylint = "*"
mypy = "*"
invoke = "*"
coverage = {version = "^5.5", extras = ["toml"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.mypy]
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "invoke",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
src_paths = [
    "src"
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = ["logging-fstring-interpolation", "missing-class-docstring", "missing-function-docstring"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.'FORMAT CHECKER']
max-line-length=120

[tool.pylint.'SIMILARITIES CHECKER']
ignore-imports="yes"
